place if condition around sidekiq

--- a/.ebextensions/0002_sidekiq.config
+++ b/.ebextensions/0002_sidekiq.config
@@ -37,12 +37,15 @@ files:
 
       sleep 10
 
-      su -s /bin/bash -c "bundle exec sidekiq \
-        -e $RACK_ENV \
-        -P $SIDEKIQ_PID \
-        -C $SIDEKIQ_CONFIG \
-        -L $SIDEKIQ_LOG \
-        -d" $EB_APP_USER
+      if [ $RUN_SIDEKIQ -eq "true" ]
+      then
+        su -s /bin/bash -c "bundle exec sidekiq \
+          -e $RACK_ENV \
+          -P $SIDEKIQ_PID \
+          -C $SIDEKIQ_CONFIG \
+          -L $SIDEKIQ_LOG \
+          -d" $EB_APP_USER
+      fi
 
   "/opt/elasticbeanstalk/hooks/appdeploy/pre/03_mute_sidekiq.sh":
     mode: "000755"
