--- a/.ebextensions/0002_sidekiq.config
+++ b/.ebextensions/0002_sidekiq.config
@@ -37,7 +37,7 @@ files:
 
       sleep 10
 
-      if [ $RUN_SIDEKIQ -eq "true" ]
+      if [ "$RUN_SIDEKIQ" == "true" ]
       then
         su -s /bin/bash -c "bundle exec sidekiq \
           -e $RACK_ENV \
